--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "http-proxy-middleware": "^3.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
