--- a/backend/package.json
+++ b/backend/package.json
@@ -3,5 +3,8 @@
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "express": "^4.21.1"
+  },
+  "scripts": {
+    "start": "node src/server.js"
   }
 }
